--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "crisp-sdk-web": "^1.0.25",
+    "heroicons": "^2.2.0",
     "jest": "^29.7.0",
     "openai": "^4.80.0",
     "react": "^18.3.1",
