--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "crisp-sdk-web": "^1.0.25",
     "heroicons": "^2.2.0",
     "jest": "^29.7.0",
+    "jwt-decode": "^4.0.0",
     "openai": "^4.80.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-uuid": "^2.0.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
